[package]
name = "picolab"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0",features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/examples/rp" }
]
